# contents of pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-package-mariannecowherd"
version = "0.1.0"
dependencies = [
  "numpy"
]
authors = [
  { name="Marianne Cowherd", email="mariannecowherd@gmail..com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.optional-dependencies]
test = ["pytest"]


[project.urls]
"Homepage" = "https://mariannecowherd.github.io/example-package-mariannecowherd"
"Source Code" = "https://github.com/mariannecowherd/example-package-mariannecowherd"

